--- a/sass/imports/_docs.scss
+++ b/sass/imports/_docs.scss
@@ -35,7 +35,7 @@
     border: 0;
     color: _palette(meta);
     display: inline-block;
-    margin-left: -26px;
+    margin-left: -21px;
     opacity: 0;
     padding-right: 5px;
     -webkit-transition: opacity .3s ease;
