--- a/sass/imports/_general.scss
+++ b/sass/imports/_general.scss
@@ -12,6 +12,7 @@ body {
   color: _palette(primary);
   line-height: 1.875;
   text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
 
